# watchplant_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml  plotjuggler.xml
launch/: connect_remote.yml  main.launch  starter.sh
msg/: SignedFloat.msg
params/: config.yaml
src/: consensus_node.py  cybres_mu.py  plant_consensus_node.py  plant_interface.py  read_ble.py  read_sms.py  zmq_to_ros.py
src/FONA_SMS_Response/: FONA_SMS_Response.ino
src/voltage_meter/: voltage_meter.ino
srv/: SetValue.srv
utils/: raspi_docker_setup.sh  set_up_passwordless.sh  update_bashrc_remote.sh
