<?xml version="1.0"?>
<package format="2">
  <name>watchplant_demo</name>
  <version>0.0.1</version>
  <description>Watchplant demo on LARICS XMAS</description>

  <maintainer email="marko.krizmancic@fer.hr">Marko Krizmancic</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <author email="marko.krizmancic@fer.hr">Marko Krizmancic</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
